/images/ vervangen images/

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</section>
 			<section>
 				<button aria-label="Press to close ticker with free delivery for new pre-spring 24 collection">
-					<img src="/images/Close.svg" alt="Close button cross">
+					<img src="images/Close.svg" alt="Close button cross">
 				</button>
 			</section>
 		</section>
@@ -90,7 +90,7 @@
 					</ul>
 				</li>
 				<li class="searchbar">
-					<form action="">Search<img src="/images/Unknown-4.svg" alt="Magnifying loop icon"></form>
+					<form action="">Search<img src="images/Unknown-4.svg" alt="Magnifying loop icon"></form>
 					<label for="Search"></label>
 				</li>
 			</ul>
@@ -101,10 +101,10 @@
 							<input type="search" placeholder="search">
 						</li>
 						<li>
-							<img src="/images/Unknown-4.svg" alt="Magnifying loop icon">
+							<img src="images/Unknown-4.svg" alt="Magnifying loop icon">
 						</li>
 						<li>
-							<button id="close" aria-label="Press to close search bar"><img src="/images/Close.svg" alt="Close button cross"></button>
+							<button id="close" aria-label="Press to close search bar"><img src="images/Close.svg" alt="Close button cross"></button>
 						</li>
 					</ul>
 					<ul>
@@ -145,10 +145,10 @@
 			</section>
 			<section id="menu-open" class="hidden">
 				<article>
-					<button><img src="/images/Close.svg" class="afsluiten" alt=""></button>
+					<button><img src="images/Close.svg" class="afsluiten" alt=""></button>
 					<ul>
 						<li>
-							<a href=""><img src="/images/Ganni-logo.svg" alt=""></a>
+							<a href=""><img src="images/Ganni-logo.svg" alt=""></a>
 						</li>
 					</ul>
 					<ul>
@@ -216,11 +216,11 @@
 <!-- ////////////////////-->
 
 	<section class="banner">
-		<img src="/images/Gannibanner.jpeg" alt="">
+		<img src="images/Gannibanner.jpeg" alt="">
 		<h1>Our new collection is here!</h1>
 		<a href="https://www.ganni.com/en-nl/new-in/" class="shop">
 			<h2>Shop new in</h2>
-			<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
+			<img src="images/Arrowright.svg" alt="Arrow pointing to the right icon">
 		</a>
 	</section>
 
@@ -231,11 +231,11 @@
 	<section class="slider">
 		<h3>New in</h3>
 			<article class="slides">
-				<a href=""><img src="/images/Left.svg" alt=""></a>
+				<a href=""><img src="images/Left.svg" alt=""></a>
 				<article id="slide1">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+					<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 					<a href="">
-						<img src="/images/F8683-019-1.jpg" alt="">
+						<img src="images/F8683-019-1.jpg" alt="">
 						<h4>Brown brushed alpaca o-neck sweater</h4>
 						<h4>€225</h4>
 					</a>
@@ -243,7 +243,7 @@
 					<button>Add to bag</button>
 				</article>
 				<article id="slide2">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+					<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 					<a href="/tint-denim-mini-dress.html" aria-label="Press to go to Tint denim mini dress €225">
 						<img src="images/J1376-091-1.jpg" alt="">
 						<h4>Tint denim mini dress</h4>
@@ -253,9 +253,9 @@
 					<button>Add to bag</button>
 				</article>
 				<article id="slide3">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+					<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 					<a href="" aria-label="Press to go to leopard betzy cropped jeans">
-						<img src="/images/J1059-943-1.jpg" alt="">
+						<img src="images/J1059-943-1.jpg" alt="">
 						<h4>Leopard betzy cropped jeans</h4>
 						<h4>€195</h4>
 					</a>
@@ -264,27 +264,27 @@
 					<button>Add to bag</button>
 				</article>
 				<article id="slide4">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+					<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 					<a href="">
-						<img src="/images/F8544-099-1.jpg" alt="">
+						<img src="images/F8544-099-1.jpg" alt="">
 						<h4>Oversized tech puffer coat</h4>
 						<h4>€495</h4>
 					</a>
 					<button>Add to bag</button>
 				</article>
 				<article id="slide5">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+					<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 					<a href="">
-						<img src="/images/J1352-055-1.jpg" alt="">
+						<img src="images/J1352-055-1.jpg" alt="">
 						<h4>Snow washed denim angi jeans</h4>
 						<h4>€275</h4>
 					</a>
 					<button>Add to bag</button>
 				</article>
 				<article id="slide6">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+					<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 					<a href="">
-						<img src="/images/F9182-016-1.jpg" alt="">
+						<img src="images/F9182-016-1.jpg" alt="">
 						<h4>Streched striped belt blazer</h4>
 						<h4>€395</h4>
 					</a>
@@ -292,11 +292,11 @@
 					<p>Exclusive</p>
 					<button>Add to bag</button>
 				</article>
-				<a href="#slide2" target="2"><img src="/images/Right.svg" alt=""></a>
+				<a href="#slide2" target="2"><img src="images/Right.svg" alt=""></a>
 			</article>
 			<a href="" class="shop">
 				<h4>Shop now</h4>
-				<img src="/images/Arrowright.svg" alt="">
+				<img src="images/Arrowright.svg" alt="">
 			</a>
 	</section>
 
@@ -307,19 +307,19 @@
 	<section class="gallery">
 		<article class="image">
 			<a href="https://www.ganni.com/en-nl/shoes/">
-				<img src="/images/09_STILL_LIFE_GANNI_0218__5500px.jpg" alt="Picture of black ganni cowboy boots">
+				<img src="images/09_STILL_LIFE_GANNI_0218__5500px.jpg" alt="Picture of black ganni cowboy boots">
 				<p>shop shoes</p>
 			</a>
 		</article>
 		<article class="image">
 			<a href="https://www.ganni.com/en-nl/bags/">
-				<img src="/images/wk48bags2.jpg" alt="Picture of black ganni Bou bag">
+				<img src="images/wk48bags2.jpg" alt="Picture of black ganni Bou bag">
 				<p>shop bags</p> 
 			</a>
 		</article>
 		<article class="image">
 			<a href="https://www.ganni.com/en-nl/new-in/" aria-label="Press to shop the new pre-spring 24 collection">
-				<img src="/images/ps-24-07.jpg" alt="Picture of an outfit from the new 24 pre-spring collection">
+				<img src="images/ps-24-07.jpg" alt="Picture of an outfit from the new 24 pre-spring collection">
 				<p>shop now</p>
 			</a>
 		</article>
@@ -332,9 +332,9 @@
 		<section class="slider">
 			<article class="slides">
 			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+				<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 				<a href="https://www.ganni.com/en-nl/silver-mid-shaft-embroidered-western-boots-silver-S242701836.html">
-					<img src="/images/S2427-018-1.jpg" alt="Silver mid shaft embroidered western boots €645">
+					<img src="images/S2427-018-1.jpg" alt="Silver mid shaft embroidered western boots €645">
 					<h4>Silver mid shaft embroidered western boots</h4>
 					<h4>€645</h4>
 				</a>
@@ -342,27 +342,27 @@
 				<button>Add to bag</button>
 			</article>
 			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+				<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 				<a href="https://www.ganni.com/en-nl/3d-sequins-maxi-dress-F8625.html?dwvar_F8625_color=Mauve%20Chalk">
-					<img src="/images/F8625-494-1.jpg" alt="3D sequins maxi dress €545">
+					<img src="images/F8625-494-1.jpg" alt="3D sequins maxi dress €545">
 					<h4>3D sequins maxi dress</h4>
 					<h4>€545</h4>
 				</a>
 				<button>Add to bag</button>
 			</article>
 			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+				<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 				<a href="https://www.ganni.com/en-nl/black-mini-ganni-bou-bag-black-A537909900.html">
-					<img src="/images/A5379-099-1.jpg" alt="Black mini ganni bou bag €295">
+					<img src="images/A5379-099-1.jpg" alt="Black mini ganni bou bag €295">
 					<h4>Black mini ganni bou bag</h4>
 					<h4>€295</h4>
 				</a>
 				<button>Add to bag</button>
 			</article>
 			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+				<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 				<a href="https://www.ganni.com/en-nl/white-relaxed-lemon-t-shirt-T3768.html?dwvar_T3768_color=Bright%20White">
-					<img src="/images/T3768-151-1.jpg" alt="White relaxed lemon t-shirt €110">
+					<img src="images/T3768-151-1.jpg" alt="White relaxed lemon t-shirt €110">
 					<h4>White relaxed lemon t-shirt</h4>
 					<h4>€110</h4>
 				</a>
@@ -370,18 +370,18 @@
 				<button>Add to bag</button>
 			</article>
 			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+				<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 				<a href="https://www.ganni.com/en-nl/search?q=Sand%20fitted%20wool%20rib%20knit%20beanie">
-					<img src="/images/A5369-196-1.jpg" alt="Sand fitted wool rib knit beanie €75">
+					<img src="images/A5369-196-1.jpg" alt="Sand fitted wool rib knit beanie €75">
 					<h4>Sand fitted wool rib knit beanie</h4>
 					<h4>€75</h4>
 				</a>
 				<button>Add to bag</button>
 			</article>
 			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
+				<button><img src="images/Heart-big.svg" alt="button add product to wishlist"></button>
 				<a href="https://www.ganni.com/en-nl/snow-washed-denim-a-line-mini-dress-J1371.html?dwvar_J1371_color=Black%20Washed">
-					<img src="/images/J1371-055-1.jpg" alt="Snow washed denim a-line mini dress €265">
+					<img src="images/J1371-055-1.jpg" alt="Snow washed denim a-line mini dress €265">
 					<h4>Snow washed denim a-line mini dress</h4>
 					<h4>€265</h4>
 				</a>
@@ -391,7 +391,7 @@
 	</section>
 		<a href="https://www.ganni.com/en-nl/ganni-icons//" class="shop">
 			<h2>Shop icons</h2>
-			<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
+			<img src="images/Arrowright.svg" alt="Arrow pointing to the right icon">
 		</a>
 	</section>
 	<section class="shopthelook">
@@ -400,7 +400,7 @@
 			<article class="slides">
 				<article>
 					<a href="https://www.ganni.com/en-nl/look-07-Shop+Pre%2DSpring+07.html" aria-label="Press to see and shop look 7 in silver">
-						<img src="/images/ps-24-07.jpg" alt="Look 7 in silver">
+						<img src="images/ps-24-07.jpg" alt="Look 7 in silver">
 					</a>
 					<button>Shop now</button>
 				</article>
@@ -412,25 +412,25 @@
 				</article>
 				<article>
 					<a href="https://www.ganni.com/en-nl/look-010-Shop+Pre%2DSpring+010.html" aria-label="Press to see and shop look 10 with silver 3D sequin dressr">
-						<img src="/images/ps-24-10.jpg" alt="Look 10 with silver 3D sequin dressr">
+						<img src="images/ps-24-10.jpg" alt="Look 10 with silver 3D sequin dressr">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
 					<a href="https://www.ganni.com/en-nl/look-15-Shop+Pre%2DSpring+15.html" aria-label="Press to see and shop look 15 with denim and brown bou bag">
-						<img src="/images/shop-the-look-drop2-01.jpg" alt="Look 15 with denim and brown bou bag">
+						<img src="images/shop-the-look-drop2-01.jpg" alt="Look 15 with denim and brown bou bag">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
 					<a href="https://www.ganni.com/en-nl/look-08-Shop+Pre%2DSpring+08.html" aria-label="Press to see and shop look 8 with black long dress">
-						<img src="/images/A3121-099-8.jpg" alt="Look 8 with black long dress">
+						<img src="images/A3121-099-8.jpg" alt="Look 8 with black long dress">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
 					<a href="https://www.ganni.com/en-nl/look-09-Shop+Pre%2DSpring+09.html" aria-label="Press to see and shop look 9 with wool coat">
-						<img src="/images/ps-24-09.jpg" alt="Look 9 with wool coat">
+						<img src="images/ps-24-09.jpg" alt="Look 9 with wool coat">
 					</a>
 					<button>Shop now</button>
 				</article>
@@ -438,41 +438,41 @@
 		</section>
 		<a href="https://www.ganni.com/en-nl/shop-the-look/" class="shop">
 			<h2>Shop the look</h2>
-			<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
+			<img src="images/Arrowright.svg" alt="Arrow pointing to the right icon">
 		</a>
 	</section>
 	<section class="ganniworld">
 		<article>
 			<a href="https://www.ganni.com/en-nl/ganni-girls-around-the-world.html" aria-label="Press to see what Ganni girls are wearing">
-				<img src="/images/hp-image-03.jpg" alt="A Ganni girl">
+				<img src="images/hp-image-03.jpg" alt="A Ganni girl">
 			</a>
 			<h6>Ganni world</h6>
 			<h6>Discover the GANNI universe with style and everyday inspiration from our GANNI Girl community</h6>
 			<a href="https://www.ganni.com/en-nl/ganni-girls-around-the-world.html" class="shop" aria-label="Press to see what Ganni girls are wearing">
 				<h2>Discover more</h2>
-				<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
+				<img src="images/Arrowright.svg" alt="Arrow pointing to the right icon">
 			</a>
 		</article>
 		<article>
 			<a href="https://www.ganni.com/en-nl/stores-find" aria-label="Press to find a store close to you">
-			<img src="/images/hp-image-04.jpg" alt="Interior of a Ganni store">
+			<img src="images/hp-image-04.jpg" alt="Interior of a Ganni store">
 			</a>
 			<h6>Come say hi</h6>
 			<h6>Head to your local store where Team GANNI will walk you through our latest collections + hottest arrivals and get inspired by their new season favourites</h6>
 			<a href="https://www.ganni.com/en-nl/stores-find" class="shop" aria-label="Press to find a store close to you">
 				<h2>Find store</h2>
-				<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
+				<img src="images/Arrowright.svg" alt="Arrow pointing to the right icon">
 			</a>
 		</article>
 		<article>
 			<a href="https://www.ganni.com/en-nl/responsibility.html" aria-label="Press to read how we take on responsibility">
-			<img src="/images/hp-image-02.jpg" alt="">
+			<img src="images/hp-image-02.jpg" alt="">
 			</a>
 			<h6>Our journey to do better</h6>
 			<h6>Our focus is becoming the most responsible version of ourselves. GANNI's Fabics of The Future initiative helps us explore designing with alternative annovative fabrics.</h6>
 			<a href="https://www.ganni.com/en-nl/responsibility.html" class="shop" aria-label="Press to read how we take on responsibility">
 				<h2>Learn more</h2>
-				<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
+				<img src="images/Arrowright.svg" alt="Arrow pointing to the right icon">
 			</a>
 		</article>
 	</section>
@@ -482,19 +482,19 @@
 				<ul class="align">
 					<li>
 						<a href="">
-						<img src="/images/icon1.svg" alt="">
+						<img src="images/icon1.svg" alt="">
 						<h6>Need help?</h6>
 						</a>
 					</li>
 					<li>
 						<a href="">
-						<img src="/images/icon2.svg" alt="">
+						<img src="images/icon2.svg" alt="">
 						<h6>Delivery</h6>
 						</a>
 					</li>
 					<li>
 						<a href="">
-						<img src="/images/icon3.svg" alt="">
+						<img src="images/icon3.svg" alt="">
 						<h6>Free returns</h6>
 						</a>
 					</li>
@@ -630,16 +630,16 @@
 			<li>
 				<ul class="socials">
 					<li>
-						<a href=""><img src="/images/Instagram.svg" alt=""></a>
+						<a href=""><img src="images/Instagram.svg" alt=""></a>
 					</li>
 					<li>
-						<a href=""><img src="/images/Unknown-10.svg" alt=""></a>
+						<a href=""><img src="images/Unknown-10.svg" alt=""></a>
 					</li>
 					<li>
-						<a href=""><img src="/images/Unknown-9.svg" alt=""></a>
+						<a href=""><img src="images/Unknown-9.svg" alt=""></a>
 					</li>
 					<li>
-						<a href=""><img src="/images/Youtube.svg" alt=""></a>
+						<a href=""><img src="images/Youtube.svg" alt=""></a>
 					</li>
 				</ul>
 			</li>
